--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="AtomicwareApp">
 <head>
 
 <!-- /.website title -->
@@ -66,7 +66,7 @@
 				<!-- /.signup form -->
 				<div class="col-md-5">
 				
-					<div class="signup-header wow fadeInUp">
+					<div class="signup-header wow fadeInUp" style="display:none">
 						<h3 class="form-title text-center">HAZ IGNICIÓN</h3>
 						<form class="form-header" action="http://atomicware.mx:1337/contacto" role="form" method="POST" id="#">
 						<input type="hidden" name="u" value="503bdae81fde8612ff4944435">
@@ -518,19 +518,19 @@
 					</div>
 					
 					<!-- /.contact form -->
-					<div class="col-sm-7 contact-right">
-						<form method="POST" id="contact-form" class="form-horizontal" action="http://atomicware.mx:1337/contacto" onSubmit="alert('Gracias, nos pondremos en contacto contigo lo más pronto posible!');">
+					<div class="col-sm-7 contact-right" ng-controller="ContactoCtrl">
+						<form method="POST" id="contact-form" class="form-horizontal"   ng-submit="enviar()">
 							<div class="form-group">
-							<input type="text" name="Name" id="Name" class="form-control wow fadeInUp" placeholder="Name" required/>
+							<input type="text" ng-model="contacto.nombre" name="Name" id="Name" class="form-control wow fadeInUp" placeholder="Name" required/>
 							</div>
 							<div class="form-group">
-							<input type="text" name="Email" id="Email" class="form-control wow fadeInUp" placeholder="Email" required/>
+							<input type="text" ng-model="contacto.email" name="Email" id="Email" class="form-control wow fadeInUp" placeholder="Email" required/>
 							</div>					
 							<div class="form-group">
-							<textarea name="Message" rows="20" cols="20" id="Message" class="form-control input-message wow fadeInUp"  placeholder="Message" required></textarea>
+							<textarea name="Message" ng-model="contacto.mensaje" rows="20" cols="20" id="Message" class="form-control input-message wow fadeInUp"  placeholder="Message" required></textarea>
 							</div>
 							<div class="form-group">
-							<input type="submit" name="submit" value="Submit" class="btn btn-success wow fadeInUp" />
+							<input type="submit" name="submit" value="Enviar" class="btn btn-success wow fadeInUp" />
 							</div>
 						</form>		
 					</div>
@@ -569,5 +569,7 @@
 	<script>
 		new WOW().init();
 	</script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+	<script src="js/atomicware.js"></script>
   </body>
 </html>
