--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 						<div class="client-pic text-center">
 						
 							<!-- /.client photo -->
-							<img src="images/client.jpg" alt="client">
+							<img src="images/pasquinel.png" alt="client">
 						</div>
 						<div class="box">
 						
@@ -456,7 +456,7 @@
 						<div class="client-pic text-center">
 
 							<!-- /.client photo -->
-							<img src="images/client.jpg" alt="client">
+							<img src="images/alfonso.jpg" alt="client">
 						</div>
 						<div class="box">
 
@@ -475,7 +475,7 @@
 						<div class="client-pic text-center">
 
 							<!-- /.client photo -->
-							<img src="images/client.jpg" alt="client">
+							<img src="images/arturo.jpg" alt="client">
 						</div>
 						<div class="box">
 
