quiens abe que paso

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 
 <!-- /.website title -->
-<title>AtomicWare Landing Page</title>
+<title>AtomicWare | Expertos en Node.js, Desarrollo de Software, Consultoría & Headhunting</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="description" content="AtomicWare. Expertos en Node.js, NoSQL, Desarrollo de Software, Consultoría & Headhunting. Desarrollo en Node, Mongo, Express, Andoroid, Ios, Ionic Framework, cassandra, RabbitMQ, Java, Spring, EJB, .NET, C#, Sails, Redis y más...">
+<meta name="keywords" content="HTML,CSS,XML,JavaScript,phonegap,node js tutorial,Node, Node js,Node Mexico,Expertos node,recursos node,node senior,node sr,node jr,node junior,contrata node,programador node,programadores node,mongo,MongoDB,Mongo DB, Express,Andoroid,Desarrollo Android,apps Android,Apps ios, Ios,Ionic Framework,cassandra,RabbitMQ,Java,Spring,EJB,.NET,C#,Sails,Redis">
 
 <!-- CSS Files -->
 <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -15,7 +17,7 @@
 <link href="css/owl.carousel.css" rel="stylesheet">
 
 <!-- Colors -->
-<link href="css/css-index.css" rel="stylesheet" media="screen">
+<link href="css/css-index.css" rel="stylesheet" media="screen"> 
 <!-- <link href="css/css-index-green.css" rel="stylesheet" media="screen"> -->
 <!-- <link href="css/css-index-purple.css" rel="stylesheet" media="screen"> -->
 <!-- <link href="css/css-index-red.css" rel="stylesheet" media="screen"> -->
@@ -24,10 +26,21 @@
 
 <!-- Google Fonts -->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" />
-
+ 
 </head>
   
 <body data-spy="scroll" data-target="#navbar-scroll">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-76367558-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 <!-- /.preloader -->
 <div id="preloader"></div>
@@ -46,12 +59,12 @@
 
 					<!-- /.main title -->
 						<h1 class="wow fadeInLeft">
-						AtomicWare creas experiencias únicas
+						Expertos en desarrollo de software
 						</h1>
 
 					<!-- /.header paragraph -->
 					<div class="landing-text wow fadeInUp">
-						<p>Somos una empresa 100% Méxicana que trabaja con los más altos estándares de calidad, procesos ágiles y la última tecnología importada directamente desde Silicon Valley para lograr la satisfacción total de nuestros clientes.</p>
+						<p>Somos una empresa 100% Méxicana, pioneros y expertos en desarrollo con tecnología Node.js & NoSQL(MongoDB, Cassandra, PouchDB) entre otras utilizadas en Silicon Valley. Trabajamos con los más altos estándares de calidad, metodologías ágiles.</p>
 					</div>				  
 
 					<!-- /.header button -->
@@ -106,11 +119,11 @@
 	 
 			  <div id="navbar-scroll" class="collapse navbar-collapse navbar-backyard navbar-right">
 				<ul class="nav navbar-nav">
-					<li><a href="#intro">About</a></li>
-					<li><a href="#feature">Features</a></li>
+					<li><a href="#intro">¿Que hacemos?</a></li>
+					<li><a href="#feature">¿Cómo lo hacemos?</a></li>
 					<!--li><a href="#download">Download</a></li-->
 					<!--li><a href="#package">Pricing</a></li-->
-					<li><a href="#testi">Reviews</a></li>
+					<li><a href="#testi">Testimonios</a></li>
 					<li><a href="#contact">Contacto</a></li>
 				</ul>
 			  </div>
@@ -130,11 +143,11 @@
 			
 			<!-- /.intro content -->
 			<div class="col-md-6 wow slideInRight">
-				<h2>Optimice el performance de sus aplicaciones con tecnología de Sillicon Valley</h2>
-				<p>Creamos experiencias para sus clientes a través del mundo digital. <a href="#">Excelentes Aplicaciones</a> generan un ambiente de comunicación y cercanía con sus clientes. Nuestro equipo no cree en lo imposible, hacemos nuestro trabajo con responsabilidad, entusiasmo y siempre pensando en lo mejor para nuestros clientes.
+				<h2>Desarrolle nuevos servicios ú optimice sus aplicaciones existentes con tecnología de Sillicon Valley</h2>
+				<p>Ayúdamos a hacer realidad sus ideas a través del mundo digital. <a href="#">Servicios innovadores</a>  generan un ambiente de comunicación y cercanía con sus clientes. Nuestro equipo no cree en lo imposible, hacemos nuestro trabajo con responsabilidad, entusiasmo y siempre pensando en lo mejor para nuestros clientes.
 				</p>
 
-					<div class="btn-section"><a href="#feature" class="btn-default">Learn More</a></div>
+					<div class="btn-section"><a href="#feature" class="btn-default">Conozca Más</a></div>
 		
 			</div>
 		</div>			  
@@ -178,7 +191,7 @@
 					<i class="pe-7s-cash pe-5x pe-va wow fadeInUp" data-wow-delay="0.2s"></i>
 					<div class="inner">
 						<h4>App Monetization</h4>
-						<p>Cree suscripciones, planes y realice cobros desde sus Apps</p>
+						<p>Cree suscripciones, planes y realice cobros recurrentes desde sus Apps</p>
 						<br>
 					</div>
 				</div>
@@ -188,7 +201,7 @@
 					<i class="pe-7s-cart pe-5x pe-va wow fadeInUp" data-wow-delay="0.4s"></i>
 					<div class="inner">
 						<h4>Tienda InApp</h4>
-						<p>Cree su propia aplicación de tienda, promocione y venda sus productos desde la comodidad de su teléfono</p>
+						<p>Cree su propia aplicación de tienda, promocione y venda sus productos en línea aceptando tarjeta y de débito, crédito y meses sin intereses.</p>
 					</div>
 				</div>
 			
@@ -411,8 +424,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 text-center">
-					<img alt="client" src="images/nodejs.png" class="wow fadeInUp">
-					<img alt="client" src="images/angular.png" class="wow fadeInUp" data-wow-delay="0.2s">
+					<img alt="client" src="images/nodejs.png" class="wow fadeInUp" title="Node.js" title="Node.js">
+					<img alt="client" src="images/angular.png" class="wow fadeInUp" data-wow-delay="0.2s" title="Angular" title="Angular">
 					<img alt="client" src="images/android.png" class="wow fadeInUp" data-wow-delay="0.4s">
 					<img alt="client" src="images/microsoft.png" class="wow fadeInUp" data-wow-delay="0.6s">
 					<img alt="client" src="images/apple.png" class="wow fadeInUp" data-wow-delay="0.8s">
@@ -553,7 +566,7 @@
 						<li><a class="wow fadeInUp" href="https://instagram.com/" data-wow-delay="0.6s"><i class="fa fa-instagram"></i></a></li>
 					</ul>
 				</div>	
-			<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Atomicware 2015 - Design by <a href="http://www.moxdesign.com">MoxDesign</a></div>
+			<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Atomicware 2016 </div>
 			<a href="#" class="scrollToTop"><i class="pe-7s-up-arrow pe-va"></i></a>
 		</div>	
 	</div>	
