cambios forma de contacto

--- a/index.html
+++ b/index.html
@@ -538,6 +538,9 @@
 							</div>
 							<div class="form-group">
 							<input type="text" ng-model="contacto.email" name="Email" id="Email" class="form-control wow fadeInUp" placeholder="Email" required/>
+							</div>	
+							<div class="form-group">
+							<input type="number" ng-model="contacto.telefono" name="Telefono" id="Telefono" class="form-control wow fadeInUp" placeholder="Teléfono" required/>
 							</div>					
 							<div class="form-group">
 							<textarea name="Message" ng-model="contacto.mensaje" rows="20" cols="20" id="Message" class="form-control input-message wow fadeInUp"  placeholder="Message" required></textarea>
